# StepCounting

./: .gitignore  CMakeLists.txt  说明.txt
include/: scMethods.h  utils.h
src/: CMakeLists.txt  dyPeak.cpp  dyThreshold.cpp  dyZcross.cpp  utils.cpp
test/: CMakeLists.txt  main.cpp
test/data/: CMakeLists.txt  groundtruth_SC.txt  说明.txt
